[gd_scene load_steps=2 format=3 uid="uid://dliuvq8rd7j35"]

[ext_resource type="Script" uid="uid://clktqhcx08jwh" path="res://scripts/dealership.gd" id="1_rnwk5"]

[node name="Dealership" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rnwk5")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CarList" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="CreditsLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Credits: 0"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
